; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_preset_all.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_manager.c_manager_preset_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }

@UNIT_FILE_SYSTEM = common dso_local global i32 0, align 4
@UNIT_FILE_PRESET_ENABLE_ONLY = common dso_local global i32 0, align 4
@EEXIST = common dso_local global i32 0, align 4
@LOG_NOTICE = common dso_local global i32 0, align 4
@LOG_WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [64 x i8] c"Failed to populate /etc with preset unit settings, ignoring: %m\00", align 1
@.str.1 = private unnamed_addr constant [42 x i8] c"Populated /etc with preset unit settings.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @manager_preset_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @manager_preset_all(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = call i32 @assert(%struct.TYPE_6__* %4)
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp sle i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %42

11:                                               ; preds = %1
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = call i32 @MANAGER_IS_SYSTEM(%struct.TYPE_6__* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %11
  br label %42

16:                                               ; preds = %11
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %18 = call i64 @MANAGER_IS_TEST_RUN(%struct.TYPE_6__* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  br label %42

21:                                               ; preds = %16
  %22 = load i32, i32* @UNIT_FILE_SYSTEM, align 4
  %23 = load i32, i32* @UNIT_FILE_PRESET_ENABLE_ONLY, align 4
  %24 = call i32 @unit_file_preset_all(i32 %22, i32 0, i32* null, i32 %23, i32* null, i32 0)
  store i32 %24, i32* %3, align 4
  %25 = load i32, i32* %3, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %40

27:                                               ; preds = %21
  %28 = load i32, i32* %3, align 4
  %29 = load i32, i32* @EEXIST, align 4
  %30 = sub nsw i32 0, %29
  %31 = icmp eq i32 %28, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %27
  %33 = load i32, i32* @LOG_NOTICE, align 4
  br label %36

34:                                               ; preds = %27
  %35 = load i32, i32* @LOG_WARNING, align 4
  br label %36

36:                                               ; preds = %34, %32
  %37 = phi i32 [ %33, %32 ], [ %35, %34 ]
  %38 = load i32, i32* %3, align 4
  %39 = call i32 @log_full_errno(i32 %37, i32 %38, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str, i64 0, i64 0))
  br label %42

40:                                               ; preds = %21
  %41 = call i32 @log_info(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  br label %42

42:                                               ; preds = %10, %15, %20, %40, %36
  ret void
}

declare dso_local i32 @assert(%struct.TYPE_6__*) #1

declare dso_local i32 @MANAGER_IS_SYSTEM(%struct.TYPE_6__*) #1

declare dso_local i64 @MANAGER_IS_TEST_RUN(%struct.TYPE_6__*) #1

declare dso_local i32 @unit_file_preset_all(i32, i32, i32*, i32, i32*, i32) #1

declare dso_local i32 @log_full_errno(i32, i32, i8*) #1

declare dso_local i32 @log_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
